After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 579645 - Don't show error dialog for G_IO_ERROR_ALREADY_MOUNTED
Don't show error dialog for G_IO_ERROR_ALREADY_MOUNTED
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on: 579634
Blocks:
 
 
Reported: 2009-04-20 19:37 UTC by Matthias Clasen
Modified: 2011-09-09 04:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (774 bytes, patch)
2009-04-20 20:21 UTC, Matthias Clasen
committed Details | Review

Description Matthias Clasen 2009-04-20 19:37:55 UTC
nautilus should ignore already-mounted errors and not show an error dialog in this case.

+++ This bug was initially created as a clone of Bug #579634 +++

When I plug in my camera, I get two autorun dialogs plus and error dialog. I can understand the two autorun dialogs, since there are two actual stores on the camera (see the attached gphoto2 --summary output), but the error dialog is kinda bad.

It says:

Unable to mount Kodak Co. Digital Camera
Error initializing camera: -60: Could not lock the device

So I assume what is happening is that gvfs is mounting the camera when it sees the first storage, and then when it tries to handle the second one, the camera is already mounted. 

Is there a way for the gphoto backend to notice that the camera is already mounted, and return an already-mounted error in this case ?
Comment 1 Matthias Clasen 2009-04-20 20:21:57 UTC
Created attachment 132986 [details] [review]
patch

This patch builds, I haven't actually tested it. Needs testing when gvfs has been fixed to return an already-mounted error in this case.
Comment 2 Marcus Carlson 2010-07-21 22:35:34 UTC
Doesn't gvfs return already-mounted errors now? (git grep says so...)
Comment 3 Cosimo Cecchi 2011-09-09 04:35:51 UTC
The patch is right anyway, so I pushed it to master.