file-operations: ignore ALREADY_MOUNTED errors when mounting

Don't spawn an error dialog in this case.

https://bugzilla.gnome.org/show_bug.cgi?id=579645